--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,24 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - My_class",
+            "request": "launch",
+            "mainClass": "My_class"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Try_CallbyValue",
+            "request": "launch",
+            "mainClass": "Try_CallbyValue"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Try_Collection02",
+            "request": "launch",
+            "mainClass": "Try_Collection02"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Try_Collection",
             "request": "launch",
             "mainClass": "Try_Collection"
